Stripped networking code as its not used

--- a/Assets/WebGLTemplates/INFTERACT/index.html
+++ b/Assets/WebGLTemplates/INFTERACT/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="TemplateData/style.css">
 	
 	<!--- Include Our Stuff --->
-	<script src="StreamingAssets/socket.io.js"></script>
 	<script src="StreamingAssets/web3.min.js"></script>  
-	<script data-main="StreamingAssets/nftwork" src="StreamingAssets/require.js"></script>
+	<script src="StreamingAssets/require.js"></script>
 	
 	<style>
 	body {
