Wrong html file was selected

--- a/Assets/WebGLTemplates/INFTERACT/index.html
+++ b/Assets/WebGLTemplates/INFTERACT/index.html
@@ -9,7 +9,7 @@
 	
 	<!--- Include Our Stuff --->
 	<script src="StreamingAssets/web3.min.js"></script>  
-	<script src="StreamingAssets/require.js"></script>
+	<script data-main="StreamingAssets/nftauth" src="StreamingAssets/require.js"></script>
 	
 	<style>
 	body {
